--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "npm run build && gh-pages -d dist"
+      "build": "next build"
+    }
+    
   },
   "dependencies": {
     "core-js": "^3.8.3",
